syntax = "proto3";
package streetgangpb;


message GetVersionRequest
{
	string track_id = 1;
}
